src/bridge/bridge.hpp

extern "C" int QuoteApi_UnSubscribeAllTickByTick(XTP::API::QuoteApi *self, XTP_EXCHANGE_TYPE exchange_id = XTP_EXCHANGE_UNKNOWN);
extern "C" int QuoteApi_Login(XTP::API::QuoteApi *self, const char *ip, int port, const char *user, const char *password, XTP_PROTOCOL_TYPE sock_type);
extern "C" int QuoteApi_Logout(XTP::API::QuoteApi *self);
extern "C" int QuoteApi_QueryAllTickers(XTP::API::QuoteApi *self, XTP_EXCHANGE_TYPE exchange_id);
extern "C" int QuoteApi_QueryTickersPriceInfo(XTP::API::QuoteApi *self, char *ticker[], int count, XTP_EXCHANGE_TYPE exchange_id);
extern "C" int QuoteApi_QueryAllTickersPriceInfo(XTP::API::QuoteApi *self);
extern "C" int QuoteApi_SubscribeAllOptionMarketData(XTP::API::QuoteApi *self, XTP_EXCHANGE_TYPE exchange_id = XTP_EXCHANGE_UNKNOWN);
extern "C" int QuoteApi_UnSubscribeAllOptionMarketData(XTP::API::QuoteApi *self, XTP_EXCHANGE_TYPE exchange_id = XTP_EXCHANGE_UNKNOWN);
extern "C" int QuoteApi_SubscribeAllOptionOrderBook(XTP::API::QuoteApi *self, XTP_EXCHANGE_TYPE exchange_id = XTP_EXCHANGE_UNKNOWN);
extern "C" int QuoteApi_UnSubscribeAllOptionOrderBook(XTP::API::QuoteApi *self, XTP_EXCHANGE_TYPE exchange_id = XTP_EXCHANGE_UNKNOWN);
extern "C" int QuoteApi_SubscribeAllOptionTickByTick(XTP::API::QuoteApi *self, XTP_EXCHANGE_TYPE exchange_id = XTP_EXCHANGE_UNKNOWN);
extern "C" int QuoteApi_UnSubscribeAllOptionTickByTick(XTP::API::QuoteApi *self, XTP_EXCHANGE_TYPE exchange_id = XTP_EXCHANGE_UNKNOWN);
extern "C" XTP::API::TraderApi *CreateTraderApi(uint8_t client_id, const char *save_file_path, XTP_LOG_LEVEL log_level = XTP_LOG_LEVEL_DEBUG);
extern "C" void TraderApi_Release(XTP::API::TraderApi *self);
extern "C" const char *GetTradingDay(XTP::API::TraderApi *self);
extern "C" void TraderApi_RegisterSpi(XTP::API::TraderApi *self, XTP::API::TraderSpi *spi);
extern "C" XTPRI *GetApiLastError(XTP::API::TraderApi *self);
extern "C" const char *TraderApi_GetApiVersion(XTP::API::TraderApi *self);
extern "C" uint8_t TraderApi_GetClientIDByXTPID(XTP::API::TraderApi *self, uint64_t order_xtp_id);
extern "C" const char *TraderApi_GetAccountByXTPID(XTP::API::TraderApi *self, uint64_t order_xtp_id);
extern "C" void TraderApi_SubscribePublicTopic(XTP::API::TraderApi *self, XTP_TE_RESUME_TYPE resume_type);
extern "C" void TraderApi_SetSoftwareVersion(XTP::API::TraderApi *self, const char *version);
extern "C" void TraderApi_SetSoftwareKey(XTP::API::TraderApi *self, const char *key);
extern "C" void TraderApi_SetHeartBeatInterval(XTP::API::TraderApi *self, uint32_t interval);
extern "C" uint64_t TraderApi_Login(XTP::API::TraderApi *self, const char *ip, int port, const char *user, const char *password, XTP_PROTOCOL_TYPE sock_type);
extern "C" int TraderApi_Logout(XTP::API::TraderApi *self, uint64_t session_id);
extern "C" bool TraderApi_IsServerRestart(XTP::API::TraderApi *self, uint64_t session_id);
extern "C" uint64_t TraderApi_InsertOrder(XTP::API::TraderApi *self, XTPOrderInsertInfo *order, uint64_t session_id);
extern "C" uint64_t TraderApi_CancelOrder(XTP::API::TraderApi *self, const uint64_t order_xtp_id, uint64_t session_id);
extern "C" int TraderApi_QueryOrderByXTPID(XTP::API::TraderApi *self, const uint64_t order_xtp_id, uint64_t session_id, int request_id);
extern "C" int TraderApi_QueryOrders(XTP::API::TraderApi *self, const XTPQueryOrderReq *query_param, uint64_t session_id, int request_id);
extern "C" int TraderApi_QueryOrdersByPage(XTP::API::TraderApi *self, const XTPQueryOrderByPageReq *query_param, uint64_t session_id, int request_id);
extern "C" int TraderApi_QueryTradesByXTPID(XTP::API::TraderApi *self, const uint64_t order_xtp_id, uint64_t session_id, int request_id);
extern "C" int TraderApi_QueryTrades(XTP::API::TraderApi *self, XTPQueryTraderReq *query_param, uint64_t session_id, int request_id);
extern "C" int TraderApi_QueryTradesByPage(XTP::API::TraderApi *self, const XTPQueryTraderByPageReq *query_param, uint64_t session_id, int request_id);
extern "C" int TraderApi_QueryPosition(XTP::API::TraderApi *self, const char *ticker, uint64_t session_id, int request_id);
extern "C" int TraderApi_QueryAsset(XTP::API::TraderApi *self, uint64_t session_id, int request_id);
extern "C" int TraderApi_QueryStructuredFund(XTP::API::TraderApi *self, XTPQueryStructuredFundInfoReq *query_param, uint64_t session_id, int request_id);
extern "C" uint64_t TraderApi_FundTransfer(XTP::API::TraderApi *self, XTPFundTransferReq *fund_transfer, uint64_t session_id);
extern "C" int TraderApi_QueryFundTransfer(XTP::API::TraderApi *self, XTPQueryFundTransferLogReq *query_param, uint64_t session_id, int request_id);
extern "C" int TraderApi_QueryETF(XTP::API::TraderApi *self, XTPQueryETFBaseReq *query_param, uint64_t session_id, int request_id);
extern "C" int TraderApi_QueryETFTickerBasket(XTP::API::TraderApi *self, XTPQueryETFComponentReq *query_param, uint64_t session_id, int request_id);
extern "C" int TraderApi_QueryIPOInfoList(XTP::API::TraderApi *self, uint64_t session_id, int request_id);
extern "C" int TraderApi_QueryIPOQuotaInfo(XTP::API::TraderApi *self, uint64_t session_id, int request_id);
extern "C" int TraderApi_QueryOptionAuctionInfo(XTP::API::TraderApi *self, XTPQueryOptionAuctionInfoReq *query_param, uint64_t session_id, int request_id);