xtp-sys/src/bindings.rs

extern "C" {
    pub fn QuoteApi_UnSubscribeAllTickByTick(
        self_: *mut XTP_API_QuoteApi,
        exchange_id: XTP_EXCHANGE_TYPE,
    ) -> ::std::os::raw::c_int;
}
extern "C" {
    pub fn QuoteApi_Login(
        self_: *mut XTP_API_QuoteApi,
        ip: *const ::std::os::raw::c_char,
        port: ::std::os::raw::c_int,
        user: *const ::std::os::raw::c_char,
        password: *const ::std::os::raw::c_char,
        sock_type: XTP_PROTOCOL_TYPE,
    ) -> ::std::os::raw::c_int;
}
extern "C" {
    pub fn QuoteApi_Logout(self_: *mut XTP_API_QuoteApi) -> ::std::os::raw::c_int;
}
extern "C" {
    pub fn QuoteApi_QueryAllTickers(
        self_: *mut XTP_API_QuoteApi,
        exchange_id: XTP_EXCHANGE_TYPE,
    ) -> ::std::os::raw::c_int;
}
extern "C" {
    pub fn QuoteApi_QueryTickersPriceInfo(
        self_: *mut XTP_API_QuoteApi,
        ticker: *mut *mut ::std::os::raw::c_char,
        count: ::std::os::raw::c_int,
        exchange_id: XTP_EXCHANGE_TYPE,
    ) -> ::std::os::raw::c_int;
}
extern "C" {
    pub fn QuoteApi_QueryAllTickersPriceInfo(self_: *mut XTP_API_QuoteApi)
        -> ::std::os::raw::c_int;
}
extern "C" {
    pub fn QuoteApi_SubscribeAllOptionMarketData(
        self_: *mut XTP_API_QuoteApi,
        exchange_id: XTP_EXCHANGE_TYPE,
    ) -> ::std::os::raw::c_int;
}
extern "C" {
    pub fn QuoteApi_UnSubscribeAllOptionMarketData(
        self_: *mut XTP_API_QuoteApi,
        exchange_id: XTP_EXCHANGE_TYPE,
    ) -> ::std::os::raw::c_int;
}
extern "C" {
    pub fn QuoteApi_SubscribeAllOptionOrderBook(
        self_: *mut XTP_API_QuoteApi,
        exchange_id: XTP_EXCHANGE_TYPE,
    ) -> ::std::os::raw::c_int;
}
extern "C" {
    pub fn QuoteApi_UnSubscribeAllOptionOrderBook(
        self_: *mut XTP_API_QuoteApi,
        exchange_id: XTP_EXCHANGE_TYPE,
    ) -> ::std::os::raw::c_int;
}
extern "C" {
    pub fn QuoteApi_SubscribeAllOptionTickByTick(
        self_: *mut XTP_API_QuoteApi,
        exchange_id: XTP_EXCHANGE_TYPE,
    ) -> ::std::os::raw::c_int;
}
extern "C" {
    pub fn QuoteApi_UnSubscribeAllOptionTickByTick(
        self_: *mut XTP_API_QuoteApi,
        exchange_id: XTP_EXCHANGE_TYPE,
    ) -> ::std::os::raw::c_int;
}
extern "C" {
    pub fn CreateTraderApi(
        client_id: u8,
        save_file_path: *const ::std::os::raw::c_char,
        log_level: XTP_LOG_LEVEL,
    ) -> *mut XTP_API_TraderApi;
}
extern "C" {
    pub fn TraderApi_Release(self_: *mut XTP_API_TraderApi);
}
extern "C" {
    pub fn GetTradingDay(self_: *mut XTP_API_TraderApi) -> *const ::std::os::raw::c_char;
}
extern "C" {
    pub fn TraderApi_RegisterSpi(self_: *mut XTP_API_TraderApi, spi: *mut XTP_API_TraderSpi);
}
extern "C" {
    pub fn GetApiLastError(self_: *mut XTP_API_TraderApi) -> *mut XTPRI;
}
extern "C" {
    pub fn TraderApi_GetApiVersion(self_: *mut XTP_API_TraderApi) -> *const ::std::os::raw::c_char;
}
extern "C" {
    pub fn TraderApi_GetClientIDByXTPID(self_: *mut XTP_API_TraderApi, order_xtp_id: u64) -> u8;
}
extern "C" {
    pub fn TraderApi_GetAccountByXTPID(
        self_: *mut XTP_API_TraderApi,
        order_xtp_id: u64,
    ) -> *const ::std::os::raw::c_char;
}
extern "C" {
    pub fn TraderApi_SubscribePublicTopic(
        self_: *mut XTP_API_TraderApi,
        resume_type: XTP_TE_RESUME_TYPE,
    );
}
extern "C" {
    pub fn TraderApi_SetSoftwareVersion(
        self_: *mut XTP_API_TraderApi,
        version: *const ::std::os::raw::c_char,
    );
}
extern "C" {
    pub fn TraderApi_SetSoftwareKey(
        self_: *mut XTP_API_TraderApi,
        key: *const ::std::os::raw::c_char,
    );
}
extern "C" {
    pub fn TraderApi_SetHeartBeatInterval(self_: *mut XTP_API_TraderApi, interval: u32);
}
extern "C" {
    pub fn TraderApi_Login(
        self_: *mut XTP_API_TraderApi,
        ip: *const ::std::os::raw::c_char,
        port: ::std::os::raw::c_int,
        user: *const ::std::os::raw::c_char,
        password: *const ::std::os::raw::c_char,
        sock_type: XTP_PROTOCOL_TYPE,
    ) -> u64;
}
extern "C" {
    pub fn TraderApi_Logout(
        self_: *mut XTP_API_TraderApi,
        session_id: u64,
    ) -> ::std::os::raw::c_int;
}
extern "C" {
    pub fn TraderApi_IsServerRestart(self_: *mut XTP_API_TraderApi, session_id: u64) -> bool;
}
extern "C" {
    pub fn TraderApi_InsertOrder(
        self_: *mut XTP_API_TraderApi,
        order: *mut XTPOrderInsertInfo,
        session_id: u64,
    ) -> u64;
}
extern "C" {
    pub fn TraderApi_CancelOrder(
        self_: *mut XTP_API_TraderApi,
        order_xtp_id: u64,
        session_id: u64,
    ) -> u64;
}
extern "C" {
    pub fn TraderApi_QueryOrderByXTPID(
        self_: *mut XTP_API_TraderApi,
        order_xtp_id: u64,
        session_id: u64,
        request_id: ::std::os::raw::c_int,
    ) -> ::std::os::raw::c_int;
}
extern "C" {
    pub fn TraderApi_QueryOrders(
        self_: *mut XTP_API_TraderApi,
        query_param: *const XTPQueryOrderReq,
        session_id: u64,
        request_id: ::std::os::raw::c_int,
    ) -> ::std::os::raw::c_int;
}
extern "C" {
    pub fn TraderApi_QueryOrdersByPage(
        self_: *mut XTP_API_TraderApi,
        query_param: *const XTPQueryOrderByPageReq,
        session_id: u64,
        request_id: ::std::os::raw::c_int,
    ) -> ::std::os::raw::c_int;
}
extern "C" {
    pub fn TraderApi_QueryTradesByXTPID(
        self_: *mut XTP_API_TraderApi,
        order_xtp_id: u64,
        session_id: u64,
        request_id: ::std::os::raw::c_int,
    ) -> ::std::os::raw::c_int;
}
extern "C" {
    pub fn TraderApi_QueryTrades(
        self_: *mut XTP_API_TraderApi,
        query_param: *mut XTPQueryTraderReq,
        session_id: u64,
        request_id: ::std::os::raw::c_int,
    ) -> ::std::os::raw::c_int;
}
extern "C" {
    pub fn TraderApi_QueryTradesByPage(
        self_: *mut XTP_API_TraderApi,
        query_param: *const XTPQueryTraderByPageReq,
        session_id: u64,
        request_id: ::std::os::raw::c_int,
    ) -> ::std::os::raw::c_int;
}
extern "C" {
    pub fn TraderApi_QueryPosition(
        self_: *mut XTP_API_TraderApi,
        ticker: *const ::std::os::raw::c_char,
        session_id: u64,
        request_id: ::std::os::raw::c_int,
    ) -> ::std::os::raw::c_int;
}
extern "C" {
    pub fn TraderApi_QueryAsset(
        self_: *mut XTP_API_TraderApi,
        session_id: u64,
        request_id: ::std::os::raw::c_int,
    ) -> ::std::os::raw::c_int;
}
extern "C" {
    pub fn TraderApi_QueryStructuredFund(
        self_: *mut XTP_API_TraderApi,
        query_param: *mut XTPQueryStructuredFundInfoReq,
        session_id: u64,
        request_id: ::std::os::raw::c_int,
    ) -> ::std::os::raw::c_int;
}
extern "C" {
    pub fn TraderApi_FundTransfer(
        self_: *mut XTP_API_TraderApi,
        fund_transfer: *mut XTPFundTransferReq,
        session_id: u64,
    ) -> u64;
}
extern "C" {
    pub fn TraderApi_QueryFundTransfer(
        self_: *mut XTP_API_TraderApi,
        query_param: *mut XTPQueryFundTransferLogReq,
        session_id: u64,
        request_id: ::std::os::raw::c_int,
    ) -> ::std::os::raw::c_int;
}
extern "C" {
    pub fn TraderApi_QueryETF(
        self_: *mut XTP_API_TraderApi,
        query_param: *mut XTPQueryETFBaseReq,
        session_id: u64,
        request_id: ::std::os::raw::c_int,
    ) -> ::std::os::raw::c_int;
}
extern "C" {
    pub fn TraderApi_QueryETFTickerBasket(
        self_: *mut XTP_API_TraderApi,
        query_param: *mut XTPQueryETFComponentReq,
        session_id: u64,
        request_id: ::std::os::raw::c_int,
    ) -> ::std::os::raw::c_int;
}
extern "C" {
    pub fn TraderApi_QueryIPOInfoList(
        self_: *mut XTP_API_TraderApi,
        session_id: u64,
        request_id: ::std::os::raw::c_int,
    ) -> ::std::os::raw::c_int;
}
extern "C" {
    pub fn TraderApi_QueryIPOQuotaInfo(
        self_: *mut XTP_API_TraderApi,
        session_id: u64,
        request_id: ::std::os::raw::c_int,
    ) -> ::std::os::raw::c_int;
}
extern "C" {
    pub fn TraderApi_QueryOptionAuctionInfo(
        self_: *mut XTP_API_TraderApi,
        query_param: *mut XTPQueryOptionAuctionInfoReq,
        session_id: u64,
        request_id: ::std::os::raw::c_int,
    ) -> ::std::os::raw::c_int;
}
#[repr(C)]
#[derive(Debug)]
pub struct QuoteSpiStub {
    pub _base: XTP_API_QuoteSpi,
    pub rust_object: *mut ::std::os::raw::c_void,
}
extern "C" {
    #[link_name = "\u{1}_ZN12QuoteSpiStubC1EPv"]
    pub fn QuoteSpiStub_QuoteSpiStub(
        this: *mut QuoteSpiStub,
        rust_object: *mut ::std::os::raw::c_void,
    );
}
extern "C" {
    #[link_name = "\u{1}_ZN12QuoteSpiStubD1Ev"]
    pub fn QuoteSpiStub_QuoteSpiStub_destructor(this: *mut QuoteSpiStub);
}
impl QuoteSpiStub {
    #[inline]
    pub unsafe fn new(rust_object: *mut ::std::os::raw::c_void) -> Self {
        let mut __bindgen_tmp = ::std::mem::uninitialized();
        QuoteSpiStub_QuoteSpiStub(&mut __bindgen_tmp, rust_object);
        __bindgen_tmp
    }
    #[inline]
    pub unsafe fn destruct(&mut self) {
        QuoteSpiStub_QuoteSpiStub_destructor(self)
    }
}
#[repr(C)]
#[derive(Debug)]
pub struct TraderSpiStub {
    pub _base: XTP_API_TraderSpi,
    pub rust_object: *mut ::std::os::raw::c_void,
}
extern "C" {
    #[link_name = "\u{1}_ZN13TraderSpiStubC1EPv"]
    pub fn TraderSpiStub_TraderSpiStub(
        this: *mut TraderSpiStub,
        rust_object: *mut ::std::os::raw::c_void,
    );
}
extern "C" {
    #[link_name = "\u{1}_ZN13TraderSpiStubD1Ev"]
    pub fn TraderSpiStub_TraderSpiStub_destructor(this: *mut TraderSpiStub);
}
impl TraderSpiStub {
    #[inline]
    pub unsafe fn new(rust_object: *mut ::std::os::raw::c_void) -> Self {
        let mut __bindgen_tmp = ::std::mem::uninitialized();
        TraderSpiStub_TraderSpiStub(&mut __bindgen_tmp, rust_object);
        __bindgen_tmp
    }
    #[inline]
    pub unsafe fn destruct(&mut self) {
        TraderSpiStub_TraderSpiStub_destructor(self)
    }
}
